--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ and Smarter Borrowing</h2>				</div>
 		<div class="elementor-element elementor-element-4113702 e-con-full e-flex wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="4113702" data-element_type="container">
 		<div class="elementor-element elementor-element-4fd4a6c e-con-full e-grid wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="4fd4a6c" data-element_type="container">
 				<div class="elementor-element elementor-element-18c8d02 elementor-widget elementor-widget-image" data-id="18c8d02" data-element_type="widget" data-widget_type="image.default">
-															<img loading="lazy" decoding="async" width="89" height="100" src="/lens.png" class="attachment-large size-large wp-image-1652" alt="" />															</div>
+															<img loading="lazy" decoding="async" width="89" height="100" src="./lens.png" class="attachment-large size-large wp-image-1652" alt="" />															</div>
 		<div class="elementor-element elementor-element-4f937c3 e-con-full e-flex wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="4f937c3" data-element_type="container">
 				<div class="elementor-element elementor-element-5647600 elementor-widget elementor-widget-heading" data-id="5647600" data-element_type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">04</h2>				</div>
@@ -1599,3 +1599,4 @@ const a=JSON.parse(document.getElementById("wp-emoji-settings").textContent),o=(
 </script>
 	</body>
 </html>
+
