--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 }
 
 span.wpcf7-form-control-wrap {
-    padding-left: 60px;
+    padding-left: 0px;
 }
 
 
@@ -1118,12 +1118,12 @@ and Smarter Borrowing</h2>				</div>
 </fieldset>
 <div class="cun_try">
 	<div class="dse">
-		<p>
-<span class="wpcf7-form-control-wrap" data-name="tel-880"><input size="40" maxlength="400" class="wpcf7-form-control wpcf7-tel wpcf7-text wpcf7-validates-as-tel" aria-invalid="false" placeholder="Enter Your Mobile Number" value="" type="tel" name="tel-880" /></span>
-		</p>
+		
+<span class="wpcf7-form-control-wrap" data-name="tel-880"><input size="30" maxlength="400" class="wpcf7-form-control wpcf7-tel wpcf7-text wpcf7-validates-as-tel" aria-invalid="false" placeholder="Enter Your Mobile Number" value="" type="tel" name="tel-880" /></span>
+		
 	</div>
 	<div class="dse2">
-		<p><input class="wpcf7-form-control wpcf7-submit has-spinner" type="submit" value="Let Us Call You Back" />
+		<p><input style="width: 19vw;" class="wpcf7-form-control wpcf7-submit has-spinner" type="submit" value="Let Us Call You Back" />
 		</p>
 	</div>
 </div><div class="wpcf7-response-output" aria-hidden="true"></div>
