--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ span.wpcf7-form-control-wrap {
 					 >
 				<div style="background:none;" class="elementor-element elementor-element-05afa98 e-flex e-con-boxed wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-parent" data-id="05afa98" data-element_type="container">
 					<div class="e-con-inner">
-		<div class="elementor-element elementor-element-5fde1fe e-con-full e-flex wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="5fde1fe" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+		<div style="background-color: rgba(255, 255, 255, 0.98);" class="elementor-element elementor-element-5fde1fe e-con-full e-flex wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="5fde1fe" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 		<div class="elementor-element elementor-element-631c5fe e-con-full e-grid wpr-particle-no wpr-jarallax-no wpr-parallax-no wpr-sticky-section-no e-con e-child" data-id="631c5fe" data-element_type="container">
 				<div class="elementor-element elementor-element-ce9f3de elementor-widget elementor-widget-image" data-id="ce9f3de" data-element_type="widget" data-widget_type="image.default">
 																<a href="https://codeofdolphins.com/CredBazar/">
