--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ span.wpcf7-form-control-wrap {
 				<div class="elementor-element elementor-element-87525f7 elementor-widget elementor-widget-heading" data-id="87525f7" data-element_type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">Get the financial help you need</h2>				</div>
 				<div class="elementor-element elementor-element-6366f5d elementor-widget elementor-widget-heading" data-id="6366f5d" data-element_type="widget" data-widget_type="heading.default">
-					<h2 class="elementor-heading-title elementor-size-default">Quick, Reliable &amp; Hassle-Free</h2>				</div>
+					<h2 style="font-size:40px; font-weight:600;" class="elementor-heading-title elementor-size-default">Quick, Reliable &amp; Hassle-Free</h2>				</div>
 				<div class="elementor-element elementor-element-d33e356 elementor-align-left elementor-widget elementor-widget-button" data-id="d33e356" data-element_type="widget" data-widget_type="button.default">
 										<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
